issuer names now align to the top of their cell

--- a/tahrir/static/css/tahrir.css
+++ b/tahrir/static/css/tahrir.css
@@ -69,6 +69,11 @@ td {
     visibility: collapse;
 }
 
+.top-aligned-cell {
+    vertical-align: text-top;
+    padding-top: 25px;
+}
+
 .badge-name {
     width: 50%;
 }
